Bug 1460691 - Support tooltips in top level non-XUL windows. r=enndeakin+6102,mats+6102

Add an anonymous XUL tooltip node to toplevel non-XUL windows. Setup a
nsXULTooltipListener on non-XUL nsXULWindows. Make nsXULTooltipListener
always use the default tooltip in the non-XUL case.

MozReview-Commit-ID: Koe5m8PwMQM

--HG--
extra : rebase_source : 242180e957758b51c589452e35deadac5ab06d9e